Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-Jan-2012 Jean-Marie Simonet
 # [#27579] Smart Search search term highlighting not working. Thanks Rouven and Michael.
 # [#27540] Finder / Smart Search selectbox order. Thanks Brian

05-Jan-2012 Jean-Marie Simonet
 $ Adding new installation language mn-MN

04-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files: gl-ES, sk-SK
 # [#27595] *regression: Multilanguage template styles do not display flags when homes set for a Content language
 #$ [#27556] * Smart Search ALL language displays as *. Thanks Dennis
 $ [#27594] UTF-8 consistency. Thanks Brian
 #$ [#27572] Give contact email label its own string. Thanks Andrea.
 $ [#27593] itemID consistency.Thanks Brian
 $ Adding new installation language ko-KR

03-Jan-2012 Mark Dexter
 # [#27608] Usernotes had db specific query
 # [#27590] br fixes

03-Jan-2012 Christophe Demko
 + [#27221] Improvements for batch processing (Michael Babker)

31-Dec-2011 Jean-Marie Simonet
 $ Corrected plg_system_languagecode.ini string typo.
 # [#27571] Missing or incorrect help screen key references. Thanks Chris.
 $ [#27570] Link in Plug-in Manager: System - Language Code. Thanks Brian

30-Dec-2011 Jean-Marie Simonet
 # Fixing again [#27520] lost when committing [#27498]
 # Fixing again [#27533] lost when committing [#27498]
 # Fixing again [#27510] lost when committing [#27498]
 # [#27502] JS Error: #plg_quickicon_joomlaupdate does not exist. Thanks Rouven
 
29-Dec-2011 Christophe Demko
 # [#27552] Bad character in Smart Search newsfeeds plug-in (Chris Davenport)

29-Dec-2011 Jean-Marie Simonet
 - [#27534] * regression : Message when trashing/publishing/etc. Revert #27257

28-Dec-2011 Jean-Marie Simonet
 # [#27498] Various Finder issues; Thanks all.
 $ [#27539] Finder / Smart Search language. Thanks Brian.